# research

./: .gitmodules  208.bootstrap.js  404.html  629.bootstrap.js  717.bootstrap.js  997.bootstrap.js  LICENSE  README.md  bootstrap.js  index.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: gh-pages.yml  test.yml
_next/static/4FI12zG6h-8LY8VehW8U9/: _buildManifest.js
_next/static/91EReo46-_lvhlpN0c7T2/: _buildManifest.js
_next/static/CVaF2F46l_XowXVsLknXC/: _buildManifest.js
_next/static/MNH32iea7DbCtWQDZySZV/: _buildManifest.js
_next/static/ODsmjl6Pfm-Caysvx27mL/: _buildManifest.js
_next/static/QuqeAgJufiz9IxvlxxOCo/: _buildManifest.js
_next/static/chunks/: 222-56472ee4ee4aca7f.js  (+11 more)
apps/: calc.html  make10.html
archive/nextjs-blog/: package-lock.json  package.json
archive/pages/: develop.sh  webpack.config.js
info/: tech.html
pages/: Cargo.toml  LICENSE_MIT  README.md  deploy.sh  package.json  start.sh  tsconfig.json  webpack.config.js
pages/src/: App.tsx  calc.rs  calculator.tsx  index.html  index.tsx  lib.rs
pages/www/: package.json  webpack.config.js
prime_disassemply_pollard/: Cargo.toml
problem/calculator/: Cargo.toml
problem/make10puzzle/: Cargo.toml
rpncalc/: Cargo.toml
rpncalc/src/: main.rs
website/: develop.sh  next.config.js  package.json
website/components/: calculator.module.css  calculator.module.scss  calculator.tsx  make10puzzle.module.scss  make10puzzle.tsx
website/pages/: index.tsx
website/public/: ogp.pptx  tech.pptx
website/styles/: calc.module.css  gaming.module.css  globals.css  make10.module.scss
(+94 files in other folders)
